# pbr-gpu

./: .gitignore  Cargo.toml  build.rs  notes.md
shaders/: camera.wgsl  film.wgsl  filter.wgsl  integrator.wgsl  light.wgsl  light_sampler.wgsl  material.wgsl  ray.wgsl  sampler.wgsl  scene.wgsl  shapes.wgsl  spectra.wgsl  spectrum.wgsl  texture.wgsl  transform.wgsl  util.wgsl
shaders/camera/: projective.wgsl
shaders/entrypoint/: megakernel.wgsl
shaders/integrator/: guided.wgsl  meta.wgsl  randomwalk.wgsl  simple.wgsl
shaders/light/: area.wgsl  image.wgsl  uniform.wgsl
shaders/light_sampler/: power.wgsl  uniform.wgsl
shaders/material/: conductor.wgsl  dielectric.wgsl  diffuse.wgsl  diffuse_transmit.wgsl  metallic_workflow.wgsl  thin_dielectric.wgsl  trowbridge_reitz.wgsl
shaders/sampler/: independent.wgsl  meta.wgsl
shaders/scene/: shapes.wgsl
shaders/shapes/: sphere.wgsl  triangle.wgsl
shaders/util/: distr.wgsl  misc.wgsl  spherical.wgsl  table_sample.wgsl
spectrum/: glass-BAF10-SCHOTT.csv  glass-BK7-SCHOTT.csv  glass-FK51A-SCHOTT.csv  glass-LASF9-SCHOTT.csv  glass-SF10-SCHOTT.csv  glass-SF11-SCHOTT.csv  glass-SF5-SCHOTT.csv  gueymard_1995_extraterrestrial_solar.csv  metal-Ag-Rakic-BB.csv  metal-Al-Rakic-BB.csv  metal-Au-Rakic-BB.csv  metal-Cu-Johnson.csv  metal-Cu-Rakic-BB.csv  metal-CuZn-Querry.csv  metal-MgO-Synowicki.csv  metal-TiO2-Zhukovsky.csv  ozone-absorption-cross-section-serdyuchenko.csv
src/: loader.rs  main.rs  options.rs  scene.rs  shader.rs  spectrum.rs
src/loader/: pbrt.lalrpop  pbrt.rs  ply.rs
src/scene/: light.rs  material.rs  (+6 more)
(+2 files in other folders)
